# chronology

./: README.md  chronology.db  package-lock.json  package.json  test-frontend.html
backend/: .gitignore  README.md  chronology.db  pyproject.toml
backend/app/: config.py  database.py  dataset_service.py  exceptions.py  main.py  models.py  routes.py  seed_data.py  services.py  storage.py
backend/dataset/: customer_satisfaction.csv  sales_data.csv  weather_data.csv
frontend/: API_REFACTORING_UPDATES.md  FOLDER_REORGANIZATION.md  README.md  REFACTORING_SUMMARY.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: DataTable.tsx  DataTableContent.tsx  DatasetCard.tsx  DatasetsView.tsx  Footer.tsx  Header.tsx  MetricSelector.tsx  MetricsConfig.tsx  ProjectInfo.tsx  ProjectSelector.tsx  ProjectStats.tsx  TimelineChart.tsx  ViewToggle.tsx  index.ts
frontend/src/config/: api.ts
frontend/src/contexts/: ProjectContext.tsx  ProjectContextInstance.ts  ProjectContextTypes.ts  useProjectContext.ts
frontend/src/data/: sampleData.ts
frontend/src/hooks/: useChartControls.ts  useProjects.ts  useTableState.ts
frontend/src/lib/: dataUtils.ts  index.ts  metricUtils.ts  tableUtils.ts  utils.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: App.tsx
src/components/: DataTable.tsx  Header.tsx  MetricSelector.tsx  MetricsConfig.tsx  ProjectSelector.tsx  TimelineChart.tsx  ViewToggle.tsx  index.ts
src/contexts/: ProjectContext.tsx
src/data/: sampleData.ts
src/hooks/: useProjects.ts
src/types/: index.ts
(+42 files in other folders)
