
[project]
name = "chronology-backend"
version = "0.1.0"
description = "Backend service for Chronology, a timeline visualization app for AI projects."
authors = [
    {name = "cyborgoat", email = "cyborgoat@outlook.com"}
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "python-multipart>=0.0.6,<1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
